[tool.poetry]
name = "markdown"
version = "0.1.0"
description = ""
authors = ["David Härer <david@familie-haerer.de>"]
readme = "README.md"

[tool.poetry.scripts]
markdown = "markdown.main:app"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.1"
typer = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
